@@ -1,12 +1,14 @@
 # Swagger Inflector
 
-[![Build Status](https://img.shields.io/jenkins/build.svg?jobUrl=https://jenkins.swagger.io/job/oss-swagger-inflector-master)](https://jenkins.swagger.io/view/OSS%20-%20Java/job/oss-swagger-inflector-master)
-
 [![Maven Central](https://maven-badges.herokuapp.com/maven-central/io.swagger/swagger-inflector/badge.svg?style=plastic)](https://maven-badges.herokuapp.com/maven-central/io.swagger/swagger-inflector)
 
 ----
 
 **NOTE:** If you're looking for `swagger-inflector` 1.X and Swagger/OpenApi 2.0, please refer to [v1 branch](https://github.com/swagger-api/swagger-inflector/tree/v1)
+
+**NOTE:** If you're looking for `swagger-inflector` 2.X (javax namespace), please refer to [v2 branch](https://github.com/swagger-api/swagger-inflector/tree/v2)
+
+**Version 3.0.0+ requires Java 17+ and Jakarta EE 9+ (jakarta.* namespace)**
 
 ----
 
@@ -31,8 +33,8 @@ Inflector uses the following libraries:
 
  - swagger models for the swagger definition
  - Jackson for JSON processing
- - Jersey 2.32 for REST
- - Minimum Java 8
+ - Jersey 3.x for REST (Jakarta EE 9+)
+ - **Minimum Java 17** (for version 3.0.0+)
 
 ### Integration
 
@@ -45,7 +47,7 @@ To add inflector via `web.xml`:
   <servlet-name>swagger-inflector</servlet-name>
   <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
   <init-param>
-    <param-name>javax.ws.rs.Application</param-name>
+    <param-name>jakarta.ws.rs.Application</param-name>
     <param-value>io.swagger.oas.inflector.OpenAPIInflector</param-value>
   </init-param>
   <load-on-startup>1</load-on-startup>
@@ -382,6 +384,20 @@ The samples are a being refactor to support the new inflector.
 
 You will soon find samples for the inflector project in the [Swagger-Samples](https://github.com/swagger-api/swagger-samples) repository.  The inflector projects start with `inflector-`
 
+#### Running tests
+
+**Note:** Version 3.0.0+ requires Java 17 or later to build and run.
+
+For running tests with Java 17+, you will need to either:
+- Pass `-Djdk.attach.allowAttachSelf=true` to the VM.
+- Configure the test execution JVM to start with the "-javaagent:<proper path>/jmockit.1.x.jar" initialization parameter. It can be specified in the build script file for tools such as Maven or Gradle, or in a "Run/Debug Configuration" for IntelliJ IDEA or Eclipse.
+
+<details>
+<summary>Historical note (v1/v2 branches only)</summary>
+
+If running Java 8, you will need to run a variant that has backported fix 8157236. Azul Zulu is confirmed to work (https://github.com/jmockit/jmockit1/issues/710).
+
+</details>
 
 ## Security contact
 
